<resources>
    <string name="app_name">Yellow Objects</string>
    <string name="title_ybmap">Y/B Map</string>
    <string name="title_poster_page">Poster Page</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_game">Game</string>

    <string name="event_title">Title: </string>
    <string name="event_desc">Description: </string>
    <string name="event_startdt">Starts at: </string>
    <string name="event_enddt">Ends at: </string>
    <string name="event_venue">Venue: </string>

    <string name="time_12am">12 am</string>
    <string name="time_1am">1 am</string>
    <string name="time_2am">2 am</string>
    <string name="time_3am">3 am</string>
    <string name="time_4am">4 am</string>
    <string name="time_5am">5 am</string>
    <string name="time_6am">6 am</string>
    <string name="time_7am">7 am</string>
    <string name="time_8am">8 am</string>
    <string name="time_9am">9 am</string>
    <string name="time_10am">10 am</string>
    <string name="time_11am">11 am</string>
    <string name="time_12pm">12 pm</string>
    <string name="time_13pm">13 pm</string>
    <string name="time_14pm">14 pm</string>
    <string name="time_15pm">15 pm</string>
    <string name="time_16pm">16 pm</string>
    <string name="time_17pm">17 pm</string>
    <string name="time_18pm">18 pm</string>
    <string name="time_19pm">19 pm</string>
    <string name="time_20pm">20 pm</string>
    <string name="time_21pm">21 pm</string>
    <string name="time_22pm">22 pm</string>
    <string name="time_23pm">23 pm</string>
    <string name="time_24pm">24 pm</string>
    <string name="birth_day">I am going to birthday party</string>
    <string name="current_day_date">8 October, 2016</string>
    <string name="description_scream">Scream like Maria Cordero!</string>
    <string name="description_touch_below">Touch below to start.</string>
    <string name="zero_sec"></string>
    <string name="fat_ma_cute_cute_pic">Fat Ma Cute Cute Pic</string>
    <string name="title_activity_question">Question</string>
</resources>
